# fwf

./: AUTHORS  BUGREPORT  FWF.rules  FWF.tmpl  IAFA-PACKAGE  Imakefile  LICENSE  Makefile.def.in  README.BUILD  README.Debian  README.IMAKE  README.INDEX  README.NOTES  README.OBTAIN  README.SUBMISSION  README.TODO  README.XPM  SURVEY  VERSION  configure.ac  fwf.man  techstack.md  techstack.yml
lib/: Imakefile  Makefile.am  Makefile.am.complete  StdImakefile  Wbuild.rule
lib/Alert/: Alert.c  Alert.h  Alert.man  Alert.w  AlertP.h  Imakefile  Makefile.am
lib/Animator/: Animator.c  Animator.h  Animator.man  Animator.txt  Animator.w  AnimatorP.h  Makefile.am
lib/AnsiTerm/: AnsiTerm.c  AnsiTerm.h  Makefile.am  README
lib/Array/: Array.c  Array.h  Array.man  ArrayP.h  Imakefile  Makefile.am
lib/Arrow/: Arrow.c  Arrow.h  Arrow.man  Arrow.txt  Imakefile  Makefile.am  README
lib/ArticleText/: ArtText.c  ArtText.h  ArtText.man  ArtText.w  Imakefile  Makefile.am  README
lib/Board/: Board.c  Board.h  Board.man  Board.txt  Makefile.am
lib/Button/: Button.c  Button.h  Button.man  Button.w  ButtonP.h  Makefile.am
lib/Calendar/: Calendar.c  Calendar.h  Calendar.man  Calendar.w  CalendarP.h  Imakefile  Makefile.am  README
lib/Canvas/: Canvas.c  Makefile.am
lib/CircPerc/: CircPerc.c  Imakefile  Makefile.am  README
lib/Cmap/: Cmap.c  Makefile.am
lib/Common/: Common.c  Common.h  Common.man  Common.w  Makefile.am  README
lib/Dir/: DirMgr.c  DirMgr.h  Directory.c  Directory.h  Imakefile  Makefile.am  RegExp.c  RegExp.h
lib/Enforcer/: Enforcer.c  Enforcer.h  Enforcer.man  Enforcer.w  Makefile.am  README
lib/Entry/: Entry.c  Entry.h  Entry.man  Entry.txt  Makefile.am  Makefile.byhand
lib/EzMenu/: EzME.c  EzME.h  EzMEP.h  EzMenu.c  EzMenu.man  Makefile.am  README  SmeLine.c
lib/FText/: FText.c  FText.h  FText.man  FText.txt  Makefile.am  line3d.bm.new
lib/FileChooser/: FChooser.c  FChooserP.h  Makefile.am  ShortDescription.txt
lib/FileComp/: FileComp.c  FileComp.h  FileComp.man  FileCompP.h  Makefile.am  getod.c  squish.c
lib/FileLister/: FileList.c  FileListP.h  Makefile.am
lib/FileSelector/: FileSel.c  FileSel.h  FileSelP.h  Makefile.am
lib/FoldingTree/: FoldTree.c  FoldTree.h  FoldTreeP.h  Imakefile  Makefile.am  plus.xpm
lib/Frame/: Frame.c  Frame.h  Frame.man  Makefile.am
lib/Group/: Group.c  Group.h  Group.man  GroupP.h  Imakefile  Makefile.am  README
lib/HScrollb/: HScrollb.c  HScrollb.h  HScrollb.man  HScrollbP.h  Makefile.am  README
lib/HTML2/: HTML2.c  HTML2.h  HTML2.w  HTML2P.h  Imakefile  Makefile.am  README
lib/Hdial/: Hdial.c  Hdial.man  Imakefile  Makefile.am  Makefile.noimake
lib/Histogram/: Histogram.c  Makefile.am
lib/Icon/: Icon.c  Icon.h  Icon.man  Icon.w  IconP.h  Imakefile  Makefile.am
lib/IconBox/: IconBox.c  IconBox.h  Imakefile  Makefile.am
lib/ImageSelector/: ImageSel.c  ImageSel.h  Makefile.am
lib/Label/: Label.c  Label.man  Label.txt  Label.w  LabelP.h  Makefile.am
lib/Mdial/: CHANGES  Makefile.am  Mdial.c  Mdial.man
lib/MenuBar/: Imakefile  Makefile.am  MenuBar.c  MenuBar.h  MenuBar.man  README
lib/MultiList/: Imakefile  Makefile.am  MultiList.c  MultiListP.h
lib/OptButton/: Imakefile  Makefile.am  OptButton.c  OptButton.h  OptButton.man  OptButton.txt
lib/Pager/: Makefile.am  Pager.c  Pager.h  Pager.man  Pager.txt  README
lib/PcBar/: Makefile.am  PcBar.c  PcBar.man  PcBarP.h
lib/PieMenu/: Makefile.am  PieMenu.c  PieMenu.w
lib/PixelEditor/: Imakefile  Makefile.am  PixEdit.brush  PixEdit.c  PixEdit.doc  PixEdit.man  README
lib/Prompt/: Imakefile  Makefile.am  Prompt.c  Prompt.h  Prompt.man  Prompt.txt  PromptP.h
lib/PullDown/: Imakefile  Makefile.am  PullDown.c  PullDown.man  PullDown.txt
lib/RadioGroup/: Makefile.am  RadioGrp.c  RadioGrp.h  RadioGrp.man  RadioGrp.w  RadioGrpP.h
lib/Rheostat/: CHANGELOG  Makefile.am  README  Rheostat.c  Rheostat.man  Rheostat.ps  Rheostat.txt  TODO
lib/RowCol/: Imakefile  Makefile.am  RowCol.c  RowCol.man  RowColP.h
lib/Rows/: Makefile.am  Rows.c  Rows.man  Rows.txt  Rows.w  RowsP.h
lib/SSGML/: Imakefile  Makefile.am  SSGML.c
lib/ScrollWin/: Makefile.am  ScrollWin.c  ScrollWin.h  ScrollWinP.h
lib/ScrollWin3/: Imakefile  Makefile.am  README  ScrWin3.c  ScrWin3.h  ScrWin3.txt  ScrWin3.w  ScrWin3P.h
lib/Scrollbar/: Makefile.am  README  Scrollbar.c  Scrollbar.h  Scrollbar.w
lib/ScrolledList/: Makefile.am  ScrList.c  ScrList.txt
lib/Shistogram/: Imakefile  Makefile.am  Makefile.noimake  Shistogram.README  Shistogram.c  Shistogram.man  Shistogram.txt
lib/Slider2/: Makefile.am  Slider2.c  Slider2.txt  Slider2P.h  wbuildmac.tex
lib/Slider4/: Imakefile  Makefile.am  README  Slider4.c  Slider4P.h
lib/SpinLabel/: Makefile.am  Makefile.byhand  SpinLabel.c  SpinLabel.h  SpinLabel.man  SpinLabel.w  SpinLabelP.h
lib/Stack/: Imakefile  Makefile.am  Stack.c
lib/Tabs/: Makefile.am  Tabs.c  Tabs.h  Tabs.man  Tabs.txt  Tabs.w  TabsP.h
lib/TextMenu/: Makefile.am  README  TextMenu.c  TextMenu.h  TextMenu.man  TextMenu.w.new
lib/TextOut/: Imakefile  Makefile.am  README  TextOut.c  TextOut.man  TextOut.w  TextOutP.h
lib/ThumbWheel/: Makefile.am  README  ThWheel.c
lib/ThumbWheel2/: Makefile.am  ThWheel2.c  ThWheel2.h  ThWheel2.man  ThWheel2.txt  ThWheel2.w
lib/Toggle/: Imakefile  Makefile.am  README  Toggle.c  Toggle.man  Toggle.w  ToggleP.h
lib/UserGraf/: Makefile.am  UGraf.c  UGraf.man  UGrafColor.c  UGrafDraw.c  UGrafHershey.c  UGrafTrans3.c  UGrafTransforms.c  XfwfHersheyGlyphs.c
lib/VScrollb/: Imakefile  Makefile.am  README  VScrollb.c  VScrollb.h  VScrollb.txt  VScrollb.w
lib/XmAnsiTerm/: Imakefile  Makefile.am  XmATerm.c  XmATerm.man  XmATerm.txt  XmATermP.h
lib/XmIcon/: Imakefile  Makefile.am  XmIcon.c
lib/XmPager/: Imakefile  Makefile.am  XmPager.c  flip_back.xpm
lib/XmTabs/: Imakefile  Makefile.am  XmTabs.c  XmTabs.h  XmTabs.w  XmTabsP.h  rotated.c
lib/converters/: Imakefile  Makefile.am  Pen.c  Pen.man  StrToPmap.c  StrToPmap.man  XCC.c  XCC.h  choosecol.c  converters.txt  icon.c  (+4 more)
src/: Makefile.am  Makefile.am.complete
(+568 files in other folders)
