lib_LTLIBRARIES = libfwf4.la
libfwf4_la_SOURCES =
libfwf4_la_LIBADD = \
	Board/libBoard.la \
	Button/libButton.la \
	Common/libCommon.la \
	converters/libconverters.la \
	Dir/libDir.la \
	FileSelector/libFileSelector.la \
	Frame/libFrame.la \
	Group/libGroup.la \
	Label/libLabel.la \
	MenuBar/libMenuBar.la \
	misc/libmisc.la \
	MultiList/libMultiList.la \
	OptButton/libOptButton.la \
	Prompt/libPrompt.la \
	PullDown/libPullDown.la \
	RowCol/libRowCol.la \
	Rows/libRows.la \
	scroll/libscroll.la \
	ScrolledList/libScrolledList.la \
	tabstring/libtabstring.la \
	TextMenu/libTextMenu.la \
	Toggle/libToggle.la
libfwf4_la_LDFLAGS = -lXaw -lXmu -lXt -lXpm -version-info 4:0:0


SUBDIRS = \
	Board/ \
	Button/ \
	Common/ \
	converters/ \
	Dir/ \
	FileSelector/ \
	Frame/ \
	Group/ \
	Label/ \
	MenuBar/ \
	misc/ \
	MultiList/ \
	OptButton/ \
	Prompt/ \
	PullDown/ \
	RowCol/ \
	Rows/ \
	scroll/ \
	ScrolledList/ \
	tabstring/ \
	TextMenu/ \
	Toggle/
