lib_LTLIBRARIES = libfwf.la
libfwf_la_SOURCES =
libfwf_la_LIBADD = \
	Alert/Alert.la \
	Animator/Animator.la \
	AnsiTerm/AnsiTerm.la \
	Array/Array.la \
	Arrow/Arrow.la \
	ArticleText/ArticleText.la \
	Board/Board.la \
	Button/Button.la \
	Calendar/Calendar.la \
	Canvas/Canvas.la \
	CircPerc/CircPerc.la \
	Cmap/Cmap.la \
	Common/Common.la \
	converters/converters.la \
	Dir/Dir.la \
	Enforcer/Enforcer.la \
	Entry/Entry.la \
	EzMenu/EzMenu.la \
	FileChooser/FileChooser.la \
	FileComp/FileComp.la \
	FileLister/FileLister.la \
	FileSelector/FileSelector.la \
	FoldingTree/FoldingTree.la \
	Frame/Frame.la \
	FText/FText.la \
	Group/Group.la \
	Hdial/Hdial.la \
	Histogram/Histogram.la \
	HScrollb/HScrollb.la \
	HTML2/HTML2.la \
	Icon/Icon.la \
	IconBox/IconBox.la \
	ImageSelector/ImageSelector.la \
	Label/Label.la \
	Mdial/Mdial.la \
	MenuBar/MenuBar.la \
	misc/misc.la \
	MultiList/MultiList.la \
	OptButton/OptButton.la \
	Pager/Pager.la \
	PcBar/PcBar.la \
	PieMenu/PieMenu.la \
	PixelEditor/PixelEditor.la \
	Prompt/Prompt.la \
	PullDown/PullDown.la \
	RadioGroup/RadioGroup.la \
	Rheostat/Rheostat.la \
	RowCol/RowCol.la \
	Rows/Rows.la \
	scroll/scroll.la \
	Scrollbar/Scrollbar.la \
	ScrolledList/ScrolledList.la \
	ScrollWin/ScrollWin.la \
	ScrollWin3/ScrollWin3.la \
	Shistogram/Shistogram.la \
	Slider2/Slider2.la \
	Slider4/Slider4.la \
	SpinLabel/SpinLabel.la \
	SSGML/SSGML.la \
	Stack/Stack.la \
	Tabs/Tabs.la \
	tabstring/tabstring.la \
	TextMenu/TextMenu.la \
	TextOut/TextOut.la \
	ThumbWheel/ThumbWheel.la \
	ThumbWheel2/ThumbWheel2.la \
	Toggle/Toggle.la \
	UserGraf/UserGraf.la \
	VScrollb/VScrollb.la \
	XmAnsiTerm/XmAnsiTerm.la \
	XmIcon/XmIcon.la \
	XmPager/XmPager.la \
	XmTabs/XmTabs.la

SUBDIRS = \
	Alert/ \
	Animator/ \
	AnsiTerm/ \
	Array/ \
	Arrow/ \
	ArticleText/ \
	Board/ \
	Button/ \
	Calendar/ \
	Canvas/ \
	CircPerc/ \
	Cmap/ \
	Common/ \
	converters/ \
	Dir/ \
	Enforcer/ \
	Entry/ \
	EzMenu/ \
	FileChooser/ \
	FileComp/ \
	FileLister/ \
	FileSelector/ \
	FoldingTree/ \
	Frame/ \
	FText/ \
	Group/ \
	Hdial/ \
	Histogram/ \
	HScrollb/ \
	HTML2/ \
	Icon/ \
	IconBox/ \
	ImageSelector/ \
	Label/ \
	Mdial/ \
	MenuBar/ \
	misc/ \
	MultiList/ \
	OptButton/ \
	Pager/ \
	PcBar/ \
	PieMenu/ \
	PixelEditor/ \
	Prompt/ \
	PullDown/ \
	RadioGroup/ \
	Rheostat/ \
	RowCol/ \
	Rows/ \
	scroll/ \
	Scrollbar/ \
	ScrolledList/ \
	ScrollWin/ \
	ScrollWin3/ \
	Shistogram/ \
	Slider2/ \
	Slider4/ \
	SpinLabel/ \
	SSGML/ \
	Stack/ \
	Tabs/ \
	tabstring/ \
	TextMenu/ \
	TextOut/ \
	ThumbWheel/ \
	ThumbWheel2/ \
	Toggle/ \
	UserGraf/ \
	VScrollb/ \
	XmAnsiTerm/ \
	XmIcon/ \
	XmPager/ \
	XmTabs/
