lib_LTLIBRARIES = libfwf.la
libfwf_la_SOURCES =
libfwf_la_LIBADD = \
	Alert/libAlert.la \
	Animator/libAnimator.la \
	AnsiTerm/libAnsiTerm.la \
	Array/libArray.la \
	Arrow/libArrow.la \
	ArticleText/libArticleText.la \
	Board/libBoard.la \
	Button/libButton.la \
	Calendar/libCalendar.la \
	Canvas/libCanvas.la \
	CircPerc/libCircPerc.la \
	Cmap/libCmap.la \
	Common/libCommon.la \
	converters/libconverters.la \
	Dir/libDir.la \
	Enforcer/libEnforcer.la \
	Entry/libEntry.la \
	EzMenu/libEzMenu.la \
	FileChooser/libFileChooser.la \
	FileComp/libFileComp.la \
	FileLister/libFileLister.la \
	FileSelector/libFileSelector.la \
	FoldingTree/libFoldingTree.la \
	Frame/libFrame.la \
	FText/libFText.la \
	Group/libGroup.la \
	Hdial/libHdial.la \
	Histogram/libHistogram.la \
	HScrollb/libHScrollb.la \
	HTML2/libHTML2.la \
	Icon/libIcon.la \
	IconBox/libIconBox.la \
	ImageSelector/libImageSelector.la \
	Label/libLabel.la \
	Mdial/libMdial.la \
	MenuBar/libMenuBar.la \
	misc/libmisc.la \
	MultiList/libMultiList.la \
	OptButton/libOptButton.la \
	Pager/libPager.la \
	PcBar/libPcBar.la \
	PieMenu/libPieMenu.la \
	PixelEditor/libPixelEditor.la \
	Prompt/libPrompt.la \
	PullDown/libPullDown.la \
	RadioGroup/libRadioGroup.la \
	Rheostat/libRheostat.la \
	RowCol/libRowCol.la \
	Rows/libRows.la \
	scroll/libscroll.la \
	Scrollbar/libScrollbar.la \
	ScrolledList/libScrolledList.la \
	ScrollWin/libScrollWin.la \
	ScrollWin3/libScrollWin3.la \
	Shistogram/libShistogram.la \
	Slider2/libSlider2.la \
	Slider4/libSlider4.la \
	SpinLabel/libSpinLabel.la \
	SSGML/libSSGML.la \
	Stack/libStack.la \
	Tabs/libTabs.la \
	tabstring/libtabstring.la \
	TextMenu/libTextMenu.la \
	TextOut/libTextOut.la \
	ThumbWheel/libThumbWheel.la \
	ThumbWheel2/libThumbWheel2.la \
	Toggle/libToggle.la \
	UserGraf/libUserGraf.la \
	VScrollb/libVScrollb.la \
	XmAnsiTerm/libXmAnsiTerm.la \
	XmIcon/libXmIcon.la \
	XmPager/libXmPager.la \
	XmTabs/libXmTabs.la

SUBDIRS = \
	Alert/ \
	Animator/ \
	AnsiTerm/ \
	Array/ \
	Arrow/ \
	ArticleText/ \
	Board/ \
	Button/ \
	Calendar/ \
	Canvas/ \
	CircPerc/ \
	Cmap/ \
	Common/ \
	converters/ \
	Dir/ \
	Enforcer/ \
	Entry/ \
	EzMenu/ \
	FileChooser/ \
	FileComp/ \
	FileLister/ \
	FileSelector/ \
	FoldingTree/ \
	Frame/ \
	FText/ \
	Group/ \
	Hdial/ \
	Histogram/ \
	HScrollb/ \
	HTML2/ \
	Icon/ \
	IconBox/ \
	ImageSelector/ \
	Label/ \
	Mdial/ \
	MenuBar/ \
	misc/ \
	MultiList/ \
	OptButton/ \
	Pager/ \
	PcBar/ \
	PieMenu/ \
	PixelEditor/ \
	Prompt/ \
	PullDown/ \
	RadioGroup/ \
	Rheostat/ \
	RowCol/ \
	Rows/ \
	scroll/ \
	Scrollbar/ \
	ScrolledList/ \
	ScrollWin/ \
	ScrollWin3/ \
	Shistogram/ \
	Slider2/ \
	Slider4/ \
	SpinLabel/ \
	SSGML/ \
	Stack/ \
	Tabs/ \
	tabstring/ \
	TextMenu/ \
	TextOut/ \
	ThumbWheel/ \
	ThumbWheel2/ \
	Toggle/ \
	UserGraf/ \
	VScrollb/ \
	XmAnsiTerm/ \
	XmIcon/ \
	XmPager/ \
	XmTabs/
